--- a/block-templates/single.html
+++ b/block-templates/single.html
@@ -2,7 +2,10 @@
 
 <!-- wp:group {"tagName":"main","style":{"spacing":{"padding":{"right":"var(--wp--custom--spacing--small, 1.25rem)","left":"var(--wp--custom--spacing--small, 1.25rem)"}}}} -->
 <main class="wp-block-group" style="padding-right:var(--wp--custom--spacing--small, 1.25rem);padding-left:var(--wp--custom--spacing--small, 1.25rem)"><!-- wp:group {"layout":{"inherit":true}} -->
-<div class="wp-block-group"><!-- wp:post-title {"align":"wide","style":{"spacing":{"margin":{"bottom":"var(--wp--custom--spacing--medium, 6rem)"}}}} /-->
+<div class="wp-block-group">
+<!-- wp:post-title {"align":"wide","style":{"spacing":{"margin":{"bottom":"var(--wp--custom--spacing--medium, 6rem)"}}}} /-->
+<!-- wp:post-author {"showAvatar":true} /-->
+<!-- wp:post-date {"format":"F j, Y"} /-->
 
 <!-- wp:post-featured-image {"align":"wide","style":{"spacing":{"margin":{"bottom":"var(--wp--custom--spacing--medium, 6rem)"}}}} /-->
 
@@ -22,14 +25,13 @@
 <!-- /wp:spacer -->
 
 <!-- wp:group {"layout":{"inherit":true}} -->
-<div class="wp-block-group"><!-- wp:group {"layout":{"type":"flex"}} -->
-<div class="wp-block-group"><!-- wp:post-date {"format":"F j, Y","style":{"typography":{"fontStyle":"italic","fontWeight":"400"}},"fontSize":"small"} /-->
+<div class="wp-block-group">
 
-<!-- wp:post-author {"showAvatar":false,"fontSize":"small"} /-->
-
-<!-- wp:post-terms {"term":"category","fontSize":"small"} /-->
-
-<!-- wp:post-terms {"term":"post_tag","fontSize":"small"} /--></div>
+<!-- wp:group -->
+<div class="wp-block-group">
+<!-- wp:post-terms {"term":"category","className":"is-style-outline"} /-->
+<!-- wp:post-terms {"term":"post_tag"} /-->
+</div>
 <!-- /wp:group -->
 
 <!-- wp:spacer {"height":32} -->
