Lots more work...

--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,1 +1,2 @@
-<!-- wp:pattern {"slug":"twentytwentytwo/footer-default"} /-->
+<!-- wp:pattern {"slug":"nautilus/footer-dark"} /-->
+<!-- wp:pattern {"slug":"nautilus/footer-light"} /-->
