--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,2 +1,1 @@
-<!-- wp:pattern {"slug":"nautilus/footer-dark"} /-->
-<!-- wp:pattern {"slug":"nautilus/footer-light"} /-->
+<!-- wp:pattern {"slug":"nautilus/footer-basic"} /-->
