--- a/parts/header.html
+++ b/parts/header.html
@@ -1,2 +1,1 @@
-<!-- wp:pattern {"slug":"nautilus/header-dark"} /-->
-<!-- wp:pattern {"slug":"nautilus/header-light"} /-->
+<!-- wp:pattern {"slug":"nautilus/header-basic"} /-->
