--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,1 +1,9 @@
-<!-- wp:pattern {"slug":"nautilus/footer"} /-->
+<!-- wp:group {"align":"full","style":{"spacing":{"margin":{"top":"var:preset|spacing|xxx-large","bottom":"var:preset|spacing|x-large"}}},"layout":{"inherit":true,"type":"constrained"}} -->
+<div class="wp-block-group alignfull" style="margin-top:var(--wp--preset--spacing--xxx-large);margin-bottom:var(--wp--preset--spacing--x-large)"><!-- wp:group {"align":"wide","layout":{"type":"flex","allowOrientation":false,"justifyContent":"space-between"}} -->
+<div class="wp-block-group alignwide"><!-- wp:paragraph {"textColor":"primary-light","className":"has-primary-font-family","fontSize":"small"} -->
+<p class="has-primary-font-family has-primary-light-color has-text-color has-small-font-size">© 2024 Nautilus</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:navigation {"ref":5,"textColor":"primary-light","overlayMenu":"never","layout":{"type":"flex","justifyContent":"left","orientation":"horizontal","flexWrap":"nowrap"},"fontSize":"small"} /--></div>
+<!-- /wp:group --></div>
+<!-- /wp:group -->
